--- a/vignettes/color_inst.Rmd
+++ b/vignettes/color_inst.Rmd
@@ -143,7 +143,7 @@ Hexadecimal character strings (ranging from\ "#000000" to\ "#FFFFFF") correspond
 When viewing an existing color palette with the `seecol()` function of **unikn**, the name, HEX and RGB values of the individual colors are being shown:^[Both RGB and HEX values also allow for a fourth dimension (usually named `alpha`) that denotes color transparency (or opacity). 
 For instance, the color palette `mpg_pal` provides the colors of the [Max Planck Society](https://www.mpg.de/en) as: 
 
-```{r def-col-mpg-example, fig.width = 5, fig.asp = .80, fig.align = 'center'}
+```{r def-col-mpg-example, fig.width = 5, fig.asp = .95, fig.align = 'center'}
 seecol(pal = mpg_pal, col_brd = "black", lwd_brd = .5)
 ```
 
@@ -209,18 +209,22 @@ We see:
 - 3 complements of corners are CMY (subtractive color model)
 
 
-Explaining HEX values:
+#### Explaining HEX values {-}
 
-The decimal notation system uses different symbols for 10 distinct numeric values from\ $0$ to\ $9$ and a place-value notation to express numeric values beyond\ $9$ as polynomials. For instance, the three digit notation\ $123$ is actually an abbreviation for the numeric value $1 \cdot 10^2 + 2 \cdot 10^1 + 3 \cdot 10^0$. 
+The decimal notation system uses different symbols (aka. digits or numerals) to represent 10 distinct numeric values from\ $0$ to\ $9$ and a place-value notation to express numeric values beyond\ $9$ as abbreviated polynomials. For instance, the three digit decimal notation\ $123$ is actually an abbreviation for the numeric value of $1 \cdot 10^2 + 2 \cdot 10^1 + 3 \cdot 10^0$. 
 
-A hexadecimal notation system extends this convention by using different symbols for 16 distinct numeric values from\ $0$ to\ $15$. 
-The decimal values\ $10$ to\ $15$ are represented by the letters\ $A$ to\ $F$.
+A hexadecimal notation system (HEX) uses the same 10 initial symbols, but extends their range by using different symbols for 16 distinct numeric values from\ $0$ to\ $15$. The decimal values\ $10$ to\ $15$ are represented by the letters\ $A$ to\ $F$. 
+Numeric values of 16 and beyond are expressed by using the same polynomial convention. 
+Thus, the two digit sequence\ $10$ (in HEX notation) now represents a numeric value of\ 16 (in decimal notation), and the numeric value of the digit sequence\ $123$ (in HEX notation) represents a value of $1 \cdot 16^2 + 2 \cdot 16^1 + 3 \cdot 16^0 = 291$ (in decimal notation). 
+
+The following Table lists the first 20\ symbols (or symbol combinations, for numeric values ranging from zero to nineteen) in both the decimal and HEX notation: 
 
 <!-- Table: -->
 
-symbol:  | 1 | 2 | 3 | 4 | 5 |  
-decimal: | 0 | 1 | 2 | 3 | 4 | 
-HEX:     | 0 | 1 | 2 | 3 | 4 | 
+Symbol Nr.:       |  1  |  2  |  3  |  4  |  5  |   6  | 7  |  8  |  9  | 10  | 11  | 12  | 13  | 14  | 15  | 16  | 17  | 18  | 19  | 20  | 
+:---------------  | --: | --: | --: | --: | --: | --: | --: | --: | --: | --: | --: | --: | --: | --: | --: | --: | --: | --: | --: | --: | 
+Value in decimal notation: |  0 |  1 |  2 |  3 |  4 |  5 |  6 |  7 |  8 |  9 |  10 |  11  | 12  | 13  | 14  | 15  | 16  |  17 |  18 |  19 | 
+Value in HEX notation:     |  0 |  1 |  2 |  3 |  4 |  5 |  6 |  7 |  8 |  9 |   A |   B  |  C  |  D  |  E  |  F  | 10  |  11 |  12 |  13 | 
 
 
 
@@ -239,6 +243,7 @@ base2dec("10", base = 16)  # 16 x  1
 base2dec("F0", base = 16)  # 16 * 15
 base2dec("F9", base = 16)  # 16 * 15 +  9
 base2dec("FF", base = 16)  # 16 * 15 + 15
+base2dec("123", base = 16) # (1 * 16^2) + (2 * 16^1) + (3 * 16^0) 
 ```
 
 
